--- a/views/index.pug
+++ b/views/index.pug
@@ -10,13 +10,13 @@ block content
         .anniversaire.text-center.col-xs-12
           .options-home
             a(href='/birthday')
-              button
-                span FÊTER UN ANNIVERSAIRE
+              button 
+                span.typegradient GUESS WHAT'S THE CLOSEST BDAY
       .row
         .sortir.text-center.col-xs-12
           .options-home
             a(href='/adresse')
-              button SORTIR
+              button.typegradient GO FOR DRINKS
       .row
         .col-xs-4.col-xs-offset-5
           button
