--- a/views/birthday.pug
+++ b/views/birthday.pug
@@ -6,7 +6,7 @@ block content
       .row
         .bloc-devine.text-center.col-xs-12
           .textbloc1
-            span Devine qui fête son anniversaire?
+            span GUESS WHO'S BDAY IT IS
       .row
         .input-birthday
           form.form-horizontal
