--- a/views/adresse.pug
+++ b/views/adresse.pug
@@ -5,7 +5,7 @@ block content
     .row
       .bloc1.text-center.col-xs-12
         .textbloc1
-          span Qui habite dans le
+          span.typegradient Qui habite dans le
     .row
       .container.col-xs-4
         div
@@ -17,7 +17,7 @@ block content
     .row
       .bloc-arrondissement.text-center.col-xs-12
         div
-          span arrondissement?
+          span.typegradient arrondissement?
     .row
       .col-xs-4.col-xs-offset-4
         button
