--- a/views/birthday-result.pug
+++ b/views/birthday-result.pug
@@ -6,11 +6,11 @@ block content
       .row
         .bloc-reponse.text-center.col-xs-4.col-xs-offset-4
           .options-home
-            span Réponse...
+            span.typegradient Réponse...
       .row
         .bloc-nom.text-center.col-xs-4.col-xs-offset-4
           .options-home
-            span Bien joué! 0u Déso...
+            span.typegradient Bien joué! 0u Déso...
       .row
         .gif.text-center.col-xs-12
           div
