fix: Resolve stash conflicts

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -6,7 +6,7 @@ block content
       .row
         .nom-personne.text-center.col-xs-4.col-xs-offset-4
           .options-home
-            button.typegradient Nom de la personne ou rien
+            span.typegradient Nom de la personne ou rien
       .text-center.col-xs-12
         div
           iframe.giphy-embed(src='https://giphy.com/embed/l0IxZpEsbQYba4h6E', width='480', height='282', frameborder='0', allowfullscreen='')
