add button links

--- a/views/adresse.pug
+++ b/views/adresse.pug
@@ -20,5 +20,6 @@ block content
           span.typegradient arrondissement?
     .row
       .col-xs-4.col-xs-offset-4
-        button
-          | Envoyer
+        a(href='/contact')
+          button
+            | Envoyer
