feat: Add logo homepage links

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,8 @@ block content
       .row
         .logo-wild.text-center.col-xs-12
           .options-home
-            img(src='images/logo_orange_pastille.png', alt='', height='100')
+            a(href='/')
+              img(src='images/logo_orange_pastille.png', alt='', height='100')
       .row
         .anniversaire.text-center.col-xs-12
           .options-home
