--- a/views/adresse.pug
+++ b/views/adresse.pug
@@ -3,6 +3,11 @@ extends layout
 block content
   .jumbotron
     .row
+      .logo-wild.text-center.col-xs-12
+        .options-home
+          a(href='/')
+            img(src='images/logo_orange_pastille.png', alt='', height='100')
+    .row
       .bloc1.text-center.col-xs-12
         .textbloc1
           span.typegradient Qui habite dans le
