--- a/views/birthday-result.pug
+++ b/views/birthday-result.pug
@@ -4,6 +4,11 @@ block content
 
     .container
       .row
+        .logo-wild.text-center.col-xs-12
+          .options-home
+            a(href='/')
+              img(src='images/logo_orange_pastille.png', alt='', height='100')
+      .row
         .bloc-reponse.text-center.col-xs-4.col-xs-offset-4
           .options-home
             span.typegradient Réponse...
