--- a/views/birthday.pug
+++ b/views/birthday.pug
@@ -4,6 +4,11 @@ block content
 
     .jumbotron
       .row
+        .logo-wild.text-center.col-xs-12
+          .options-home
+            a(href='/')
+              img(src='images/logo_orange_pastille.png', alt='', height='100')
+      .row
         .bloc-devine.text-center.col-xs-12
           .textbloc1
             span.typegradient GUESS WHO'S BDAY IT IS
