feat: Update styles

--- a/views/adresse.pug
+++ b/views/adresse.pug
@@ -18,7 +18,7 @@ block content
             fieldset
               .form-group
                 .input-arrondissement
-                  input#textinput.form-control.input-md(method='POST', name='textinput', type='text', placeholder='arrondissement', height='70')
+                  input#textinput.form-control.input-md(method='POST', name='textinput', type='text', placeholder='Ex: 7', height='70')
     .row
       .bloc-arrondissement.text-center.col-xs-12
         div
