--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,9 +40,8 @@ body {
 
 .anniversaire button{
   border-radius: 10px;
-  margin-bottom: 10%;
   font-weight: 500;
-  font-size: 3em;
+  font-size: 40px;
   width:500px;
   height: 150px;
   background: white;
@@ -123,7 +122,7 @@ body {
 
 .bloc1 {
   border-radius: 10px;
-  margin-bottom: 10%;
+  margin-bottom: 15px;
   font-weight: 500;
   font-size: 3em;
   width:500px;
@@ -156,29 +155,36 @@ body {
   line-height: 150px;
   border-radius: 10px;
   font-weight: 500;
-  font-size: 3em;
+  font-size: 40px;
   width:500px;
-  height: 70px;
+  /*height: 70px;*/
   color: black;
   background:transparent;
   border: none;
 }
 
-
-.input-arrondissement::placeholder {
-  color: red;
+.form-control {
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  font-size: 40px;
+  color: white;
 }
 
+.form-control::placeholder {
+  color: #fba858;
+}
 
 /* CLASSES BIRTHDAY */
 
 .bloc-devine {
   border-radius: 10px;
-  margin-bottom: 10%;
+  margin: 0 0 75px 0;
   font-weight: 500;
-  font-size: 2em;
-  width:500px;
-  line-height: 75px;
+  font-size: 40px;
+  width: 500px;
+  line-height: 150px;
+  height: 150px;
   background: white;
   color: black;
   border: none;
@@ -289,7 +295,7 @@ margin-top: -70px;
   margin-bottom: 10%;
   margin-top: 50px;
   font-weight: 500;
-  font-size: 2em;
+  font-size: 40px;
   width:400px;
   height: 100px;
   line-height: 35px;
