feat: Update styles

--- a/views/birthday.pug
+++ b/views/birthday.pug
@@ -11,14 +11,14 @@ block content
       .row
         .bloc-devine.text-center.col-xs-12
           .textbloc1
-            span.typegradient GUESS WHO'S BDAY IT IS
+            span.typegradient WHO'S BDAY IT IS?
       .row
         .input-birthday
           form.form-horizontal
             fieldset
               .form-group
                 .col-md-8.col-md-offset-2
-                  input#textinput.form-control.input-md(method='POST', name='textinput', type='text', placeholder='entre un prénom')
+                  input#textinput.form-control.input-md(method='POST', name='textinput', type='text', placeholder='make a guess')
       .row
         .col-md-8.col-md-offset-2
           button#textinput.form-control.input-md(method='POST', name='textinput', type='text', placeholder='arrondissement', height='70')
