--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
           .options-home
             a(href='/birthday')
               button
-                span.typegradient GUESS WHAT'S THE CLOSEST BDAY
+                span.typegradient GUESS WHO'S BDAY IS COMING
       .row
         .sortir.text-center.col-xs-12
           .options-home
