feat: Update adresse page styles

--- a/views/adresse.pug
+++ b/views/adresse.pug
@@ -10,7 +10,7 @@ block content
     .row
       .bloc1.text-center.col-xs-12
         .textbloc1
-          span.typegradient Qui habite dans le
+          span.typegradient WHO LIVES IN THE
     .row
       .container.col-xs-4
         div
@@ -22,7 +22,7 @@ block content
     .row
       .bloc-arrondissement.text-center.col-xs-12
         div
-          span.typegradient arrondissement?
+          span.typegradient ARRONDISSEMENT?
     .row
       .col-xs-4.col-xs-offset-4
         a(href='/contact')
