--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -156,7 +156,8 @@ body {
   border-radius: 10px;
   font-weight: 500;
   font-size: 40px;
-  width:500px;
+  width:500px;    height: 75px;
+    line-height: 75px;
   /*height: 70px;*/
   color: black;
   background:transparent;
@@ -216,8 +217,6 @@ body {
   height: 70px;
 }
 
-
-
 /* CLASSES BIRTHDAY-RESULT */
 
 .bloc-reponse {
@@ -228,10 +227,9 @@ body {
   font-weight: 500;
   font-size: 2em;
   width:400px;
-  height: 100px;
+  height: 75px;
   line-height: 75px;
   background: white;
-  color: black;
   border: none;
   padding: 20 0;
 }
@@ -239,12 +237,12 @@ body {
 .bloc-nom {
   border: none;
   border-radius: 10px;
-  margin-bottom: 10%;
+  margin-bottom: 90px;
   margin-top: -100px;
   font-weight: 500;
   font-size: 2em;
   width:400px;
-  height: 100px;
+  height: 75px;
   line-height: 75px;
   background: white;
   color: black;
@@ -252,13 +250,10 @@ body {
   padding: 20 0;
 }
 
-.gif{
-
-margin-top: -70px;
-
-
-
+.gif {
+  margin-top: -70px;
 }
+
 .textbloc1{
   text-align: center;
 }
@@ -284,12 +279,9 @@ margin-top: -70px;
   height: 70px;
 }
 
-
-
-
 /* CLASSES BIRTHDAY-RESULT */
 
-.nom-personne {
+/*.nom-personne {
   border: none;
   border-radius: 10px;
   margin-bottom: 10%;
@@ -321,10 +313,6 @@ margin-top: -70px;
   padding: 20 0;
 }
 
-
-
-
-
 .bloc-arrondissement {
   line-height: 150px;
   border-radius: 10px;
@@ -342,32 +330,4 @@ margin-top: -70px;
   border-radius: 10px;
   border: none;
   height: 70px;
-}
-
-
-
- *
- * Navigation
- *
- */
-
-
-/*
- *
- * Header
- *
- */
-
-
-/*
- *
- * Welcome Section
- *
- */
-
-
- /*
- *
- *  Footer
- *
- */
+}*/
