--- a/views/birthday-result.pug
+++ b/views/birthday-result.pug
@@ -11,11 +11,11 @@ block content
       .row
         .bloc-reponse.text-center.col-xs-4.col-xs-offset-4
           .options-home
-            span.typegradient Réponse...
+            span.typegradient It's Person Name Bday!
       .row
         .bloc-nom.text-center.col-xs-4.col-xs-offset-4
           .options-home
-            span.typegradient Bien joué! 0u Déso...
+            span.typegradient Well done!!!
       .row
         .gif.text-center.col-xs-12
           div
