--- a/views/contact.pug
+++ b/views/contact.pug
@@ -9,14 +9,14 @@ block content
             a(href='/')
               img(src='images/logo_orange_pastille.png', alt='', height='100')
       .row
-        .nom-personne.text-center.col-xs-6.col-xs-offset-4
+        .nom-personne.text-center.col-xs-4.col-xs-offset-3
           .options-home
             span.typegradient Nom de la personne ou rien
       .text-center.col-xs-12
         div
           iframe.giphy-embed(src='https://giphy.com/embed/l0IxZpEsbQYba4h6E', width='480', height='282', frameborder='0', allowfullscreen='')
       .row
-        .col-xs-6.col-xs-offset-5
-          button
+        .col-xs-6.col-xs-offset-3
+          button.form-control.input-md
             | Contacter
 
