feat: Add contact page margins

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -17,6 +17,6 @@ block content
           iframe.giphy-embed(src='https://giphy.com/embed/l0IxZpEsbQYba4h6E', width='480', height='282', frameborder='0', allowfullscreen='')
       .row
         .col-xs-6.col-xs-offset-3
-          button.form-control.input-md
+          button.form-control.input-md.contact-button
             | Contacter
 
