--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -290,7 +290,11 @@ body {
   background: white;
   border: none;
   width: 600px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+}
+
+.contact-button {
+  margin-top: 30px;
 }
 
 /*.bloc-nom {
