--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -285,7 +285,15 @@ margin-top: -70px;
 }
 
 
+.googlemap{
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 200px;
+  width: 600px;
+  height: 300px;
 
+
+}
 
 /* CLASSES BIRTHDAY-RESULT */
 
