--- a/views/contact.pug
+++ b/views/contact.pug
@@ -2,6 +2,8 @@ extends layout
 
 block content
 
+
+  each valeur in personnes
     .container
       .row
         .logo-wild.text-center.col-xs-12
@@ -11,7 +13,7 @@ block content
       .row
         .nom-personne.text-center.col-xs-6.col-xs-offset-4
           .options-home
-            span.typegradient Nom de la personne ou rien
+            span.typegradient=valeur.prénom
       .text-center.col-xs-12
         div
           iframe.giphy-embed(src='https://giphy.com/embed/l0IxZpEsbQYba4h6E', width='480', height='282', frameborder='0', allowfullscreen='')
