--- a/views/contact.pug
+++ b/views/contact.pug
@@ -13,10 +13,10 @@ block content
       .row
         .nom-personne.text-center.col-xs-4.col-xs-offset-3
           .options-home
-            span.typegradient=valeur.prénom
+            span.typegradient=valeur.Prénom
       .text-center.col-xs-12
         div
-          iframe.giphy-embed(src='https://giphy.com/embed/l0IxZpEsbQYba4h6E', width='480', height='282', frameborder='0', allowfullscreen='')
+          iframe.giphy-embed(src='https://giphy.com/embed/xThuWkj1FAYH4wmGfC', width='480', height='282', frameborder='0', allowfullscreen='')
       .row
         .col-xs-6.col-xs-offset-3
           button.form-control.input-md.contact-button
